changed backgrounds and styles

--- a/Lab2/Lab2_proj/build-ClientPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/Makefile.Release
+++ b/Lab2/Lab2_proj/build-ClientPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/Makefile.Release
@@ -349,6 +349,7 @@ release/moc_mainwindow.cpp: ../ClientPart/mainwindow.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qfiledevice.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qvector2d.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtouchdevice.h \
+		../ClientPart/buytickets.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QMainWindow \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qmainwindow.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qtabwidget.h \
@@ -461,6 +462,7 @@ release/moc_purchasesmenu.cpp: ../ClientPart/purchasesmenu.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qfiledevice.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qvector2d.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtouchdevice.h \
+		../ClientPart/buytickets.h \
 		release/moc_predefs.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/bin/moc.exe
 	P:\Programs\Qt\5.15.1\mingw81_32\bin\moc.exe $(DEFINES) --include S:/Git/ipz_1_gunko_2020/Lab2/Lab2_proj/build-ClientPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/release/moc_predefs.h -IP:/Programs/Qt/5.15.1/mingw81_32/mkspecs/win32-g++ -IS:/Git/ipz_1_gunko_2020/Lab2/Lab2_proj/ClientPart -IP:/Programs/Qt/5.15.1/mingw81_32/include -IP:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets -IP:/Programs/Qt/5.15.1/mingw81_32/include/QtGui -IP:/Programs/Qt/5.15.1/mingw81_32/include/QtANGLE -IP:/Programs/Qt/5.15.1/mingw81_32/include/QtCore -I. -IP:/Programs/Qt/Tools/mingw810_32/lib/gcc/i686-w64-mingw32/8.1.0/include/c++ -IP:/Programs/Qt/Tools/mingw810_32/lib/gcc/i686-w64-mingw32/8.1.0/include/c++/i686-w64-mingw32 -IP:/Programs/Qt/Tools/mingw810_32/lib/gcc/i686-w64-mingw32/8.1.0/include/c++/backward -IP:/Programs/Qt/Tools/mingw810_32/lib/gcc/i686-w64-mingw32/8.1.0/include -IP:/Programs/Qt/Tools/mingw810_32/lib/gcc/i686-w64-mingw32/8.1.0/include-fixed -IP:/Programs/Qt/Tools/mingw810_32/i686-w64-mingw32/include ..\ClientPart\purchasesmenu.h -o release\moc_purchasesmenu.cpp
@@ -600,7 +602,9 @@ release/buytickets.o: ../ClientPart/buytickets.cpp ../ClientPart/buytickets.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qfiledevice.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qvector2d.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtouchdevice.h \
-		ui_buytickets.h
+		ui_buytickets.h \
+		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QGraphicsDropShadowEffect \
+		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qgraphicseffect.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\buytickets.o ..\ClientPart\buytickets.cpp
 
 release/main.o: ../ClientPart/main.cpp ../ClientPart/mainwindow.h \
@@ -708,6 +712,7 @@ release/main.o: ../ClientPart/main.cpp ../ClientPart/mainwindow.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qfiledevice.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qvector2d.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtouchdevice.h \
+		../ClientPart/buytickets.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QMainWindow \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qmainwindow.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qtabwidget.h \
@@ -826,41 +831,14 @@ release/mainwindow.o: ../ClientPart/mainwindow.cpp ../ClientPart/mainwindow.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qfiledevice.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qvector2d.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtouchdevice.h \
+		../ClientPart/buytickets.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QMainWindow \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qmainwindow.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qtabwidget.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qicon.h \
 		ui_mainwindow.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/QVariant \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QApplication \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qapplication.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qcoreapplication.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qeventloop.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qdesktopwidget.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qguiapplication.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qinputmethod.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QCheckBox \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qcheckbox.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qabstractbutton.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QGridLayout \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qgridlayout.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qlayout.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qlayoutitem.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qboxlayout.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QHBoxLayout \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QLineEdit \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qlineedit.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qframe.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtextcursor.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtextformat.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qpen.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtextoption.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QPushButton \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qpushbutton.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QSpacerItem \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QStackedWidget \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qstackedwidget.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QVBoxLayout
+		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QGraphicsDropShadowEffect \
+		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qgraphicseffect.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\mainwindow.o ..\ClientPart\mainwindow.cpp
 
 release/purchasesmenu.o: ../ClientPart/purchasesmenu.cpp ../ClientPart/purchasesmenu.h \
@@ -967,29 +945,8 @@ release/purchasesmenu.o: ../ClientPart/purchasesmenu.cpp ../ClientPart/purchases
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qfiledevice.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qvector2d.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qtouchdevice.h \
+		../ClientPart/buytickets.h \
 		ui_purchasesmenu.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/QVariant \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QApplication \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qapplication.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qcoreapplication.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/qeventloop.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qdesktopwidget.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qguiapplication.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qinputmethod.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QGridLayout \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qgridlayout.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qlayout.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qlayoutitem.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qboxlayout.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QLabel \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qlabel.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qframe.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QPushButton \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qpushbutton.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qabstractbutton.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/qicon.h \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/QStackedWidget \
-		P:/Programs/Qt/5.15.1/mingw81_32/include/QtWidgets/qstackedwidget.h \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtGui/QPixmap \
 		P:/Programs/Qt/5.15.1/mingw81_32/include/QtCore/QEvent
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\purchasesmenu.o ..\ClientPart\purchasesmenu.cpp
