Icons changed and calendar design done

--- a/Lab2/Lab2_proj/build-ClientPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/Makefile.Debug
+++ b/Lab2/Lab2_proj/build-ClientPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/Makefile.Debug
@@ -120,6 +120,7 @@ debug/qrc_recources.cpp: ../ClientPart/recources.qrc \
 		../ClientPart/img/BookedTicketsIcon.png \
 		../ClientPart/img/ExitIconFocus.png \
 		../ClientPart/img/ExitIconHover.png \
+		../ClientPart/img/Arrow.png \
 		../ClientPart/img/TrainIcon.png \
 		../ClientPart/img/BookedTicketsIconFocus.png \
 		../ClientPart/img/BookedTicketsIconHover.png \
