auto localhost name detection

--- a/Lab3/Lab3_proj/build-ServerPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/Makefile
+++ b/Lab3/Lab3_proj/build-ServerPart-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/Makefile
@@ -250,6 +250,7 @@ Makefile: ../ServerPart/ServerPart.pro P:/Programs/Qt/5.15.1/mingw81_32/mkspecs/
 		P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Widgets.prl \
 		P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Gui.prl \
 		P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Sql.prl \
+		P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Network.prl \
 		P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Core.prl \
 		P:/Programs/Qt/5.15.1/mingw81_32/lib/qtmain.prl \
 		P:/Programs/Qt/5.15.1/mingw81_32/mkspecs/features/build_pass.prf
@@ -434,6 +435,7 @@ P:/Programs/Qt/5.15.1/mingw81_32/mkspecs/features/lex.prf:
 P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Widgets.prl:
 P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Gui.prl:
 P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Sql.prl:
+P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Network.prl:
 P:/Programs/Qt/5.15.1/mingw81_32/lib/Qt5Core.prl:
 P:/Programs/Qt/5.15.1/mingw81_32/lib/qtmain.prl:
 P:/Programs/Qt/5.15.1/mingw81_32/mkspecs/features/build_pass.prf:
